--- a/app/views/calculations/flexible_square_root_5.html.erb
+++ b/app/views/calculations/flexible_square_root_5.html.erb
@@ -1,1 +1,1 @@
-<h1>The square of <%= @user_num %> is <%= @user_num_square_root %></h1>
+<h1>The square of <%= @user_num %> is <%= @user_num_square_root.round(2) %></h1>
