--- a/app/views/calculations/flexible_payment.html.erb
+++ b/app/views/calculations/flexible_payment.html.erb
@@ -1,1 +1,1 @@
-A <%= @years %> year loan of $<%= @principal %>, with an annual interest rate of <%= @apr %>%, requires a monthly payment of $<%= @monthly_payment %>.
+A <%= @years %> year loan of $<%= @principal.round(2) %>, with an annual interest rate of <%= (@apr/100).round(2) %>%, requires a monthly payment of $<%= @monthly_payment.round(2) %>.
