removed double currency; included 'for' and 'id' into label and input

--- a/app/views/calculations/square_form.html.erb
+++ b/app/views/calculations/square_form.html.erb
@@ -3,11 +3,11 @@
 <form action="/square/results">
   <div>
 
-    <label>
+    <label for ="user_num">
       Enter a number
     </label>
 
-    <input type="text" name="user_num">
+    <input id = "user_num" type="text" name="user_num" placeholder="What number do you want to square?">
   </div>
 
   <button>
