--- a/app/views/calculations/flexible_payment.html.erb
+++ b/app/views/calculations/flexible_payment.html.erb
@@ -1,1 +1,1 @@
-A <%= @years %> year loan of $<%= number_to_currency(@principal.round(2), :precision => 2) %>, with an annual interest rate of <%= (@apr/100).round(2) %>%, requires a monthly payment of $<%= number_to_currency(@monthly_payment.round(2), :precision =>2) %>.
+A <%= @years %> year loan of <%= number_to_currency(@principal.round(2), :precision => 2) %>, with an annual interest rate of <%= (@apr/100).round(2) %>%, requires a monthly payment of <%= number_to_currency(@monthly_payment.round(2), :precision =>2) %>.
